force-app/main/default/objects/Labor__c/Labor__c.object-meta.xml
<CustomObject>
    <label>Labor</label>
    <nameField>
        <displayFormat>L{00000}</displayFormat>
        <label>Labor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Labors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>