force-app/main/default/objects/Labor__c/fields/Birth_Time__c.field-meta.xml
<CustomField>
    <fullName>Birth_Time__c</fullName>
    <description>Date and time of the labor end</description>
    <label>Birth Time</label>
    <type>DateTime</type>
</CustomField>