force-app/main/default/objects/Labor__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause of CSection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Not Planned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>