force-app/main/default/objects/Labor__c/fields/Labor__c.field-meta.xml
<CustomField>
    <fullName>Labor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Labor</label>
    <referenceTo>Labor__c</referenceTo>
    <relationshipLabel>Labors</relationshipLabel>
    <relationshipName>Labors</relationshipName>
    <type>Lookup</type>
</CustomField>