force-app/main/default/objects/Labor__c/fields/Medical_Staff__c.field-meta.xml
<CustomField>
    <fullName>Medical_Staff__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Medical Staff</label>
    <referenceTo>Medical_Staff__c</referenceTo>
    <relationshipLabel>Labors</relationshipLabel>
    <relationshipName>Labors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>