force-app/main/default/objects/Labor__c/fields/Pregnancy__c.field-meta.xml
<CustomField>
    <fullName>Pregnancy__c</fullName>
    <label>Pregnancy</label>
    <referenceTo>Pregnancy__c</referenceTo>
    <relationshipLabel>Labors</relationshipLabel>
    <relationshipName>Labors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>