force-app/main/default/objects/Labor__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Labors</relationshipLabel>
    <relationshipName>Labors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>