force-app/main/default/objects/Labor__c/recordTypes/CSection.recordType-meta.xml
<RecordType>
    <fullName>CSection</fullName>
    <active>true</active>
    <label>CSection</label>
</RecordType>