force-app/main/default/objects/Labor__c/recordTypes/NaturalLabor.recordType-meta.xml
<RecordType>
    <fullName>NaturalLabor</fullName>
    <active>true</active>
    <label>NaturalLabor</label>
</RecordType>